# RDGen

./: Cargo.toml  README.md
.github/workflows/: build.yml
rdgen-lib/: Cargo.toml
rdgen-lib/src/: lib.rs
src/: main.rs  program_options.rs
