[package]
name = "rdgen"
description = "A terminal program for generating reproducible random data for testing"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["TheQuantumPhysicist"]
repository = "https://github.com/TheQuantumPhysicist/rdgen"

[dependencies]
rdgen-lib = { path = "rdgen-lib" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[workspace]
members = ["rdgen-lib"]

default-members = ["."]

[workspace.package]
edition = "2021"
rust-version = "1.80"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]

[profile.release]
lto = true
