[package]
name = "rdgen-lib"
description = "The main library for a terminal program for generating reproducible random data for testing"
repository = "https://github.com/TheQuantumPhysicist/rdgen"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
